--- a/Hoja_de_Vida.html
+++ b/Hoja_de_Vida.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-        <img src="img/firma.svg" alt="firma" width="150" height="150">
+        <img src="img/firma.svg" alt="firma" width="115" height="90">
         <h1>Hoja de Vida</h1>
     </header>
     <h2>Datos Personales</h2>
@@ -21,12 +21,19 @@
     <h2>Informacion Personal</h2>
     <img src="img/foto.jpg" alt="perfil" width="150" height="200">
     <p>
-      
+      Mi nimbre es Julian camilo Quintero, empece una carrera de ingenieria electronica,<br/>y soy egresado de un instituto tecnico, el cual reforozo mucho<br/> mi parte practica, para el desarrollo de trabajos de manera independeiente,<br/> soy una persona perfecionista y me gusta el orden, suelo ser una persona calmada<br/> que medita en los problemas y trata de hallar una solucion.<br/>
+      Idiomas que domino:
     </p>
+    <ul>
+      <li>español</li>
+    </ul>
     <footer>
      <a href="mailto:camilo06.qo@gmail.com">Email</a> |
      <a href="tel">3168500321</a> |
-     <a href="https://www.facebook.com/Parzzival22" target="_blank">Facebook</a>
+     <a href="https://www.facebook.com/Parzzival22" target="_blank">
+       Facebook</a> |
+     <a href="https://www.google.com.br/maps/@4.6144001,-72.9280978,16z"
+     target="_blank">Direccion</a>
     </footer>
   </body>
 </html>
