--- a/educacion.html
+++ b/educacion.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <img src="../img/firma.svg" alt="firma" width="150" height="150">
+      <img src="../img/firma.svg" alt="firma" width="115" height="90">
       <h1>Hoja de Vida</h1>
   </header>
   <h2>Datos Personales</h2>
@@ -17,7 +17,57 @@
     Lugar de nacimiento: Villavicencio-Meta
   </h3>
   <a href="../Hoja_de_Vida.html" target="_blank"><strong>Inicio</strong></a> |
-  <a href="Experiencia/experiencia.html" target="_blank"><strong>Experiencia</strong></a>
+  <a href="../Experiencia/experiencia.html" target="_blank"><strong>Experiencia</strong></a>
   <h2>Educacion</h2>
+  <table border="1" cellpadding="10" cellspacing="0">
+    <thead>
+      <tr>
+        <th>Año</th>
+        <th>Institucion</th>
+        <th>Lugar</th>
+        <th>¿Culmino?</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2016</td>
+        <td>Tecnico Diversificado</td>
+        <td>Monterrey</td>
+        <td>Si</td>
+      </tr>
+      <tr>
+        <td>2017</td>
+        <td>Universidad de los llanos</td>
+        <td>Villavicencio</td>
+        <td>No</td>
+      </tr>
+    </tbody>
+  </table>
+  <br/>
+  <h2>Agregar estudios</h2>
+  <form autocomplete="on">Año
+    <select>
+      <option>2016</option>
+      <option>2017</option>
+      <option>2018</option>
+      <option>2019</option>
+      </optgroup>
+    </select>
+    <br/>
+    <label for="Institucion">Institucion: </label>
+    <input type="text">
+    <br/>
+    <label for="Lugar">Lugar: </label>
+    <input type="text">
+    <br/>
+    <input type="submit" name="Enviar">
+  </form>
+  <br/>
+  <footer>
+   <a href="mailto:camilo06.qo@gmail.com">Email</a> |
+   <a href="tel">3168500321</a> |
+   <a href="https://www.facebook.com/Parzzival22" target="_blank">Facebook</a> |
+   <a href="https://www.google.com.br/maps/@4.6144001,-72.9280978,16z" target="_blank">Direccion</a>
+  </footer>
   </body>
 </html>
