--- a/experiencia.html
+++ b/experiencia.html
@@ -3,9 +3,38 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,user-scalable=no">
-    <title></title>
+    <title>Hoja de Vida</title>
   </head>
   <body>
-
+    <header>
+        <img src="../img/firma.svg" alt="firma" width="115" height="90">
+        <h1>Hoja de Vida</h1>
+    </header>
+    <h2>Datos Personales</h2>
+    <h3>
+      Nombre: Julian camilo Quintero <br/>
+      Fecha de nacimiento: 02-Feb-1998 <br/>
+      Lugar de nacimiento: Villavicencio-Meta
+    </h3>
+    <a href="../Hoja_de_Vida.html" target="_blank"><strong>Inicio</strong></a> |
+    <a href="../Educacion/educacion.html" target="_blank"><strong>Educacion</strong></a>
+    <h2>Experiencia</h2>
+    <h3>Interes profesional</h3>
+    <video height="600px" width="800px" controls autoplay>
+      <source src="media/video.mp4" type="video/mp4">
+      <source src="media/video.ogg" type="video/ogg">
+      <source src="media/video.webm" type="video/webm">
+    </video>
+    <br/>
+    <h3>hobbies y actividades</h3>
+    <audio controls autoplay>
+      <source src="media/hobbies.mp3" type="audio/mpeg">
+    </audio>
   </body>
+  <footer>
+  <a href="mailto:camilo06.qo@gmail.com">Email</a> |
+  <a href="tel">3168500321</a> |
+  <a href="https://www.facebook.com/Parzzival22" target="_blank">Facebook</a> |
+  <a href="https://www.google.com.br/maps/@4.6144001,-72.9280978,16z" target="_blank">Direccion</a>
+</footer>
 </html>
